--- a/templates/rank_check.html
+++ b/templates/rank_check.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Rocket League 6 Gents - Rank Check{% endblock %}
+{% block title %}Rocket League Six Gents - Rank Check{% endblock %}
 
 {% block content %}
 <div class="content-container">
