--- a/templates/profile_stats.html
+++ b/templates/profile_stats.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}My Stats - Rocket League 6 Gents{% endblock %}
+{% block title %}My Stats - Rocket League Six Gents{% endblock %}
 
 {% block content %}
 <div class="content-container">
